sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:17: error: not found: value ecart
  }while(ecart>1)
         ^